copy vademecum examples from concrete to steel, put syntax images correctly

--- a/book/calculation_examples/steel/column.ipynb
+++ b/book/calculation_examples/steel/column.ipynb
@@ -4,7 +4,284 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Global dimensioning column"
+    "# Global dimensioning column\n",
+    "\n",
+    "````{margin}\n",
+    "**Problem analysis**\n",
+    "```{figure} ../safety/Images/design_process_1.jpg\n",
+    "```\n",
+    "The problem is already clear.\n",
+    "\n",
+    "**Schematisation structural system**\n",
+    "```{figure} ../safety/Images/design_process_2.jpg\n",
+    "```\n",
+    "The schematisation of the structure is given on the left.\n",
+    "````\n",
+    "Estimation rules also exist for columns, but especially for these elements, the actual dimensions required can be very different from those found with these estimation rules. The dimensions of the column depend strongly on the buckling length. However, there is a big difference whether a column has to support an entire building with many floors or just the roof. Often, the column at ground level is the ‘dimensional’ column. A slender column with large buckling length could also be normative, even if it is not on the ground floor.\n",
+    "\n",
+    "```{figure} ../concrete/Images/Static_Scheme_Column.jpg\n",
+    "```\n",
+    "\n",
+    "Note that for the b and for the I, the weakest direction should always apply: For HEA profiles, we therefore do not take the profile height but the width of the profile and $I_z$. Precisely this direction is the weakest and (usually) determines buckling out.\n",
+    "\n",
+    "We are going to dimension and check column D3 under the 1st floor for the office. To perform the check, we need to know what load the column has to bear. To do this, we first create a load diagram and then a weight calculation that we tabulate.\n",
+    "\n",
+    "The load diagram consists of all schematic DC plans (or a 3D drawing) showing the column in question and all structural members resting on it: Columns and beams possibly by colour and the floor area by shading. All beams within the shaded areas transfer their load to the column. We also show the length dimensions so that the total load to be carried by the column can be easily determined. The load diagram also includes collecting the loads on the column.\n",
+    "\n",
+    "```{figure} ../concrete/Images/Load_Column.jpg\n",
+    "```\n",
+    "\n",
+    "````{margin}\n",
+    "**Selection of material**\n",
+    "```{figure} ../safety/Images/design_process_3.jpg\n",
+    "```\n",
+    "A steel structure has been selected.\n",
+    "````\n",
+    "\n",
+    "```{note}\n",
+    "The imposed load on the beam and the superimposed load have already been determined in the beam's verification calculation. We found $3$ for the imposed floor load and $4.9 [kN/m^2]$ for the superimposed load on the beam. We will use the beams identified in the verification calculation. For the steel structure, this was an HE300A, strength class S355, with a weight of $0.88 [kN/m]$.\n",
+    "+++\n",
+    "{bdg-primary}`Steel`\n",
+    "```\n",
+    "\n",
+    "```{note}\n",
+    "For the concrete structure, this was a beam of 300 mm by 600 mm, made of concrete with a strength class C35/45 and a weight of $4.5 [kN/m]$.\n",
+    "+++\n",
+    "{bdg-secondary}`Concrete`\n",
+    "```\n",
+    "\n",
+    "For simplicity, we assume that the permanent load of the roof is equal to that of the floors. The roof beams are the same as those in the floor. Depending on the roof covering, the difference will not be significant. According to the Eurocode, for a roof not used as a terrace, an imposed load of $1 [kN/m^2]$ should be taken for every $10 [m^2]$ of roof area. For the entire roof, a lower imposed load can be considered. However, we choose an imposed load of $1 [kN/m^2]$. This also provides the option for installing solar panels (PV panels) or adding a light sedum planting. It is advisable to consistently record the data found for clarity. The table below summarises the loads.\n",
+    "\n",
+    "|                    | Opgelegde belasting | Opgelegde belasting | Rustende belasting | Rustende belasting | Gewicht ligger  | Gewicht ligger |\n",
+    "|--------------------|---------------------|---------------------|--------------------|--------------------|-----------------|----------------|\n",
+    "|                    | vloer               | dak                 | vloer              | dak                | vloer           | dak            |\n",
+    "|                    | [kN/m^2]            | [kN/m^2]            | [kN/m^2]           | [kN/m^2]           | [kN/m]          | [kN/m]         |\n",
+    "|   staalskelet      | 3                   | 1                   | 4.9                | 4.9                | 0.88            | 0.88           |\n",
+    "|   betonskelet      | 3                   | 1                   | 4.9                | 4.9                | 4.5             | 4.5            |\n",
+    "\n",
+    "````{margin}\n",
+    "**Estimation of structural dimensions, global sizing**\n",
+    "```{figure} ../safety/Images/design_process_4.jpg\n",
+    "```\n",
+    "````\n",
+    "\n",
+    "````{note}\n",
+    "The steel structure uses HEA profiles for the columns. The most heavily loaded column is the central column on the ground floor.\n",
+    "\n",
+    "Using the estimation rules, we roughly determine the dimensions the column should have.\n",
+    "\n",
+    "In the Steel Profiles App, we search for the corresponding profile and note down the details.\n",
+    "\n",
+    "```{figure} ../concrete/Images/HEA_320.jpg\n",
+    "---\n",
+    "width: 400px\n",
+    "---\n",
+    "```\n",
+    "+++\n",
+    "{bdg-primary}`Steel`\n",
+    "````\n",
+    "\n",
+    "```{note}\n",
+    "For a concrete column, we also need to gather the data. The most common choice is a square column. Using the estimation rule, we obtain a column: $3600 / 10 = 360 [mm]$. The weight of the column is thus \n",
+    "\n",
+    "$0.36 [m] × 0.36 [m] × 25 [kN/m^3] = 3.24 [kN/m]$. \n",
+    "\n",
+    "We can calculate the values for A and I using the mechanics formulas for cross-sections.\n",
+    "\n",
+    "| $b_{kolom}$ [mm] | Profile [mm^2] | Weight [N/mm]| A    [mm^2]   | $\\mathsf{I_z}$  [mm^4]     | Strength class | Strength [N/mm^2] | Modulus of Elasticity [N/mm^2] |\n",
+    "|----------------------|-----------|--------|---------|---------------------|----------|----------|-----------------------|\n",
+    "| 360                  | 360x360   | 3.24   | 129600  | $1399.7 \\cdot 10^6$ | C30/37   | 20       | $27.5 \\cdot 10^3$ |\n",
+    "\n",
+    "For the modulus of elasticity, we must use the design value $\\mathsf{E_{c,d}}$ according to the standard.\n",
+    "+++\n",
+    "{bdg-secondary}`Concrete`\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Weight table \n",
+    "The load is schematically represented as a point load on the column. All loads must therefore be converted to a load in kN. This can be done systematically with a weight table. This table calculates all loads on the column, per floor. The following pages show a weight table for the steel and the concrete column.\n",
+    "\n",
+    "The weight of columns and beams (given in kN per m) must be multiplied by the respective floor height and beam length to obtain a point load: [kN/m] $\\Rightarrow$ [kN].\n",
+    "\n",
+    "The imposed load and the permanent floor load are determined in [kN/m^2]. Therefore, they must be multiplied by the area in [m^2] that is supported by the respective column: [kN/m^2] $\\Rightarrow$ [kN]. To facilitate calculation, we'll place the table in an Excel spreadsheet as shown in the figures below.\n",
+    "\n",
+    "According to the standard committee, the probability of all floors being extremely loaded is almost nil. Therefore, for the variable load, the combination factor $\\psi_0$ (formerly called the moment factor) has been introduced. This is a reduction factor that should be used for almost all floors except two.\n",
+    "\n",
+    "For the two floors that contribute the most to the variable load, this should be taken extremely ($\\psi_0=1$).\n",
+    "\n",
+    "For the other floors, $\\psi_0$ depends on the use of the floor. For offices, according to the National Annex to the Eurocode, $\\psi_0 = 0.5$. For the roof, $\\psi_0 = 0$ can even be taken (but not if we consider the column under the roof or under the top floor). The formula for the total load on the column is:\n",
+    "\n",
+    "$F_d = \\gamma_{G} \\cdot \\Sigma \\hspace{0.1cm} \\text{(permanent load)} + \\gamma_{Q}\\cdot \\Sigma \\hspace{0.1cm} (\\psi_0 \\cdot \\text{variable load})$\n",
+    "\n",
+    "$\\gamma_{G}$ and $\\gamma_{Q}$ are the (partial) safety factors.\n",
+    "\n",
+    "````{margin}\n",
+    "**Load determination**\n",
+    "```{figure} ../safety/Images/design_process_5.jpg\n",
+    "```\n",
+    "\n",
+    "**Load determination per structural element**\n",
+    "```{figure} ../safety/Images/design_process_6.jpg\n",
+    "```\n",
+    "````\n",
+    "\n",
+    "```{figure} ../concrete/Images/Table_Steel_Construction.jpg\n",
+    "```\n",
+    "\n",
+    "```{figure} ../concrete/Images/Table_Concrete_Construction.jpg\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Control calculation column (compressive strength)\n",
+    "\n",
+    "````{margin}\n",
+    "**N-lines**\n",
+    "```{figure} ../safety/Images/design_process_7.jpg\n",
+    "```\n",
+    "The normal stresses are determined\n",
+    "\n",
+    "**Check ULS**\n",
+    "```{figure} ../safety/Images/design_process_8.jpg\n",
+    "```\n",
+    "Then the unity check is performed for the ULS state.\n",
+    "````\n",
+    "\n",
+    "From the column, we will verify the compressive strength and determine the slenderness ratio $n$.\n",
+    "\n",
+    "For the compressive stress, we have: \n",
+    "\n",
+    "$\\sigma_{c;d} = \\frac{F_{c;d}}{A} \\leq f_{c;d}$\n",
+    "\n",
+    "Where:\n",
+    "- $A$ is the cross-sectional area.\n",
+    "- $f_{c;d}$ is the compressive strength.\n",
+    "\n",
+    "We can also perform the Unity Check here: \n",
+    "\n",
+    "$U.C. \\Rightarrow \\frac{\\sigma_{c;d}}{f_{c;d}} \\leq 1.0$\n",
+    "\n",
+    "If the strength is not satisfied, then we can multiply the found $A$ by the value of the Unity Check to obtain the required cross-section: \n",
+    "\n",
+    "$A_{needed} = U.C. \\cdot A_{old}$\n",
+    "\n",
+    "```{note}\n",
+    "For the steel column, the total load on the column according to the weight table is 1705 [kN]. The stress in the column is:\n",
+    "\n",
+    "$\\sigma_{c;d}  = \\dfrac{F_{c;d}}{A} = \\dfrac{1704.7 \\cdot 10^3 [N]}{7680 [mm^2]}= 222 [N/mm^2]$\n",
+    "\n",
+    "The Unity Check for the HE240A profile can be determined:\n",
+    "\n",
+    "$U.C. \\Rightarrow \\dfrac{\\sigma_{c;d}}{f_{c;d}}=\\dfrac{222 [N/mm^2]}{235 [N/mm^2]}=0.94 < 1.0 \\Rightarrow \\textcolor{green}{\\text{Meets Requirement}}$\n",
+    "\n",
+    "+++\n",
+    "{bdg-primary}`Steel`\n",
+    "```\n",
+    "\n",
+    "```{note}\n",
+    "From the weight table, it appears that the concrete column on the ground floor (under the first floor) must support 1854.5 kN. The stress in the column is:\n",
+    "\n",
+    "$\\sigma_{c;d}=\\dfrac{F_{c;d}}{A}=\\dfrac{1854.7 \\cdot 10^3 [N]}{360 [mm] \\cdot 360 [mm]}=14.3 [N/mm^2]$\n",
+    "\n",
+    "The Unity Check for the $360 \\times 360 [mm^2]$ concrete column is:\n",
+    "\n",
+    "$U.C. \\Rightarrow \\dfrac{\\sigma_{c;d}}{f_{c;d}}=\\dfrac{14.3 [N/mm^2]}{20 [N/mm^2]}=0.72 < 1.0$ $\\Rightarrow \\textcolor{green}{\\text{Meets Requirement}}$\n",
+    "\n",
+    "The chosen dimensions of the column meet the requirement, but the unity check is so low that we can choose a more optimal size to save material. The minimum required dimensions of the column can be determined by calculating the required cross-sectional area:\n",
+    "\n",
+    "$A_{necessary} = U.C. \\cdot A_{old} = 0.72 \\cdot 360 [mm] \\cdot 360 [mm] = 93312 [mm^2]$\n",
+    "\n",
+    "For a square column, the dimensions would be:\n",
+    "\n",
+    "$\\sqrt{A} = \\sqrt{93312 [mm^2]} = 305 [mm]$\n",
+    "\n",
+    "This dimension is not practical. A column of $300 \\times 300 [mm^2]$ is preferred. This size is possible when using strength class C35/45 with a compressive strength of $f_c = 23.3 [N/mm^2]$:\n",
+    "\n",
+    "$\\sigma_{c;d}=\\dfrac{F_{c;d}}{A}=\\dfrac{1854.5 \\cdot 10^3 [N]}{300 [mm] \\cdot 300 [mm]} = 20.6\\ [N/mm^2] < 23.3 [N/mm^2]$\n",
+    "\n",
+    "$U.C. \\Rightarrow \\dfrac{\\sigma_{c;d}}{f_{c;d}}=\\dfrac{20.6 [N/mm^2]}{23.3 [N/mm^2]}=0.88 < 1$ $\\Rightarrow \\textcolor{green}{\\text{Meets Requirement}}$\n",
+    "+++\n",
+    "{bdg-secondary}`Concrete`\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Determination of buckling number n\n",
+    "\n",
+    "Buckling is a dangerous form of failure that occurs quite suddenly. This problem was recognised long ago. In 1744, the Swiss scholar Leonard Euler came up with the following formula:\n",
+    "\n",
+    "$F_{cr} = \\frac{\\pi^2 \\cdot E \\cdot I }{l_{cr}^2}$\n",
+    "\n",
+    "$F_{cr}$ (or $F_E$) is called the Euler or critical buckling force.\n",
+    "\n",
+    "E represents the modulus of elasticity. For concrete and wood, the modulus of elasticity for UGT should be applied, for concrete $E_{c,d}$, and for wood $E_{0,05}$ or, for laminated wood, $E_{0,gl,05}$.\n",
+    "\n",
+    "$I$ is the quadratic surface moment in the weakest direction!. The weak direction is indicated in the Netherlands with the z in the caption because the weak bending direction is around the z-axis: $I_z$.\n",
+    "\n",
+    "$l_{cr}$ is the buckling length. In a braced building with hinge connections between columns and beams, the buckling length of the column is equal to the floor height.\n",
+    "\n",
+    "```{figure} ../concrete/Images/Buckling_Column.jpg\n",
+    "```\n",
+    "\n",
+    "```{note}\n",
+    "For a column of a HE240A profile, we have:\n",
+    "\n",
+    "$F_{cr} = \\dfrac{pi^2 \\cdot E \\cdot I_z}{l^2_{cr}}=\\dfrac{\\pi^2 \\cdot 210000 [N/mm^2] \\cdot 27.69 \\cdot 10^6 [mm^4]}{(3600 [mm])^2}= 4428.3 \\cdot 10^3 [N] $\n",
+    "\n",
+    "$n = \\dfrac{F_{cr}}{F_{c;d}}= \\dfrac{4428.3 \\cdot 10^3 [N]}{1705 \\cdot 10^3 [N]} = 2.6 < 5 $\n",
+    "\n",
+    "$U.C. \\Rightarrow \\dfrac{5 \\cdot F_{c;d}}{F_{cr}}=\\dfrac{5 \\cdot 1705 \\cdot 10^3 [N]}{4428.3 \\cdot 10^3 [N]}= 1.92 > 1 \\Rightarrow \\textcolor{red}{\\text{Does not meet requirement}}$\n",
+    "\n",
+    "The buckling number is too small, indicating insufficient safety. A larger profile is needed:\n",
+    "\n",
+    "$I_{z,necessary} = U.C. \\cdot I_{z,old} = 1.92 \\cdot 27.69 \\cdot 10^6 [mm^4] = 52.6 \\cdot 10 [mm^4]$.\n",
+    "\n",
+    "In the steel profile app, a profile with at least this quadratic surface moment can be found. This could be, for example, a HE300A, which provides sufficient buckling safety. A higher strength class is not meaningful here.\n",
+    "+++\n",
+    "{bdg-primary}`Steel`\n",
+    "```\n",
+    "\n",
+    "```{note}\n",
+    "For the concrete column of $\\mathsf{360 \\cdot 360 [mm^2]}$, we have:\n",
+    "\n",
+    "$F_{cr} = \\dfrac{\\pi^2 \\cdot E \\cdot I_z}{l^2_{cr}}=\\dfrac{\\pi^2 \\cdot 27500 [N/mm^2] \\cdot 1400 \\cdot 10^6 [mm^4]}{(3600 [mm])^2}= 29313 \\cdot 10^3 [N]$\n",
+    "\n",
+    "$n = \\dfrac{F_{cr}}{F_{c;d}}= \\dfrac{29313 \\cdot 10^3 [N]}{1861.1 \\cdot 10^3 [N]} = 15.7 \\geq 5$\n",
+    "\n",
+    "$U.C. \\Rightarrow \\dfrac{5 \\cdot F_{c;d}}{F_{cr}}=\\dfrac{5 \\cdot 1861.1 \\cdot 10^3 [N]}{29313 \\cdot 10^3 [N]}= 0.32 < 1 \\Rightarrow \\textcolor{green}{\\text{Meets requirement}}$\n",
+    "\n",
+    "The buckling number indicates that the column provides ample safety against buckling. Since the U.C. is so low, we could again consider if material savings are possible. We can determine the minimum required quadratic surface moment of the column using the U.C.:\n",
+    "\n",
+    "$I_{z,required}=U.C.\\cdot I_z=0.32 \\cdot 1400 \\cdot 10^6 [mm^4] = 444 \\cdot 10^6  [mm^4]$.\n",
+    "\n",
+    "In the stress check, we found a column of $300 \\cdot 300 [mm^2]$. The quadratic surface moment at this cross-section is:\n",
+    "\n",
+    "$I_z=\\frac{1}{12} \\cdot 300 [mm] \\cdot (300 [mm])^3=675 \\cdot 10^6 [mm^4]$\n",
+    "\n",
+    "and will therefore also be more than sufficient. Concrete columns often provide sufficient buckling safety due to their relatively large surface area.\n",
+    "+++\n",
+    "{bdg-secondary}`Concrete`\n",
+    "```\n",
+    "\n",
+    "````{margin}\n",
+    "The following steps are not considered in this example.\n",
+    "**Check SLS**\n",
+    "```{figure} ../safety/Images/design_process_9.jpg\n",
+    "```\n",
+    "**Structural Design Ready**\n",
+    "```{figure} ../safety/Images/design_process_10.jpg\n",
+    "```\n",
+    "````"
    ]
   },
   {
